--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,12 @@ a{
     box-shadow: 0 12px 20px rgba(0, 0, 0, 0.103);
 }
 
+.navbar-brand:hover{
+    background: -webkit-linear-gradient(360deg, rgb(255, 221, 0), var(--golden-color));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
 a.nav-link.active{
     background: -webkit-linear-gradient(var(--yellow-color), var(--golden-color));
     -webkit-background-clip: text;
@@ -206,3 +212,55 @@ section{
         width: 100vw;
     }
 }
+
+
+
+
+/*=============================== Homme Section Ends ==================================*/
+
+
+/*=============================== Servcies Section ==================================*/
+#services{
+    background-color: var(--para-color);
+}
+
+.section-intro .divider{
+    height: 5px;
+    width: 121px;
+    background: linear-gradient(90deg, var(--golden-color), var(--para-color));
+    margin: 14px auto;
+}
+
+span{
+    color: var(--golden-color);
+}
+
+.section-intro p{
+    font-weight: 800 !important;
+    color: var(--gold-color);
+}
+
+.servcies{
+    box-shadow: 0 12px 12px var(--black-color);
+}
+
+.servcies p{
+    font-size: 1.4rem;
+    font-weight: 700;
+}
+
+.servcies .service{
+    border-bottom: 4px solid black;
+}
+
+.service i{
+    font-size: 1.4rem;
+    color: var(--gold-color);
+}
+
+.service .skill:hover{
+    color: var(--para-color)
+}
+
+/*=============================== Services Section Ends ==================================*/
+
