--- a/css/style.css
+++ b/css/style.css
@@ -242,6 +242,12 @@ span{
 
 .servcies{
     box-shadow: 0 12px 12px var(--black-color);
+    transition: all .4s ease;
+}
+
+.servcies:hover{
+    transition: all .4s ease;
+    transform: translateY(-7px);
 }
 
 .servcies p{
